# ai-legal-precedent-finder

./: .gitignore  ARCH.md  PLAN.md  PRODUCT_BRIEF.md  README.md  TODO.md  env.example
.github/workflows/: ci.yml
api/: package.json
api/src/: app.module.ts  main.ts
api/src/cases/: cases.controller.ts
api/src/database/migrations/: 001_initial_schema.sql
api/src/exports/: exports.controller.ts
api/src/graphs/: graphs.controller.ts
api/src/qa/: qa.controller.ts
api/src/summaries/: summaries.controller.ts
frontend/: package.json
frontend/src/app/: page.tsx
frontend/src/components/: AnswerPanel.tsx  GraphViewer.tsx  ReportComposer.tsx
infra/: docker-compose.dev.yml
workers/: pyproject.toml  requirements.txt
workers/case_ingest_worker/: __init__.py  main.py
workers/embed_worker/: __init__.py  main.py
workers/export_worker/: __init__.py  main.py
workers/graph_worker/: __init__.py  main.py
workers/normalize_worker/: __init__.py  main.py
workers/rag_worker/: __init__.py  main.py
workers/summary_worker/: __init__.py  main.py
